# kalshi-cricket-tracker

./: .env.kalshi.example  .gitignore  README.md  pyproject.toml
configs/: btc15m_paper.yaml  default.yaml
dashboard/: README.md  app.js  index.html  styles.css  vercel.json
dashboard/data/: dashboard-data.json
docs/: BANDIT.md  BTC15M_PAPER_RUNBOOK.md  BTC15M_PAPER_TUNING.md  BTC15_EV_NEXT_PASS.md  BTC15_NODE_EXEC_SERVICE_SPEC.md  BTC15_VOL_BWK_NEXT_SPEC.md  BTC_15M_EXEC_AGENT_SPEC.md  QUANT_SIM_UPGRADES.md  btc15m_snapshot.example.json  sample_arb_snapshots.csv
scripts/: btc15_parallel_hour_experiment.py  build_dashboard_data.py  dashboard.py  run_all.sh
services/btc15-exec-service/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
services/btc15-exec-service/src/: index.ts  runtime.ts  types.ts
services/btc15-exec-service/test/: binanceFeed.test.ts  config.test.ts  derivatives.test.ts  paperOrderManager.test.ts  runtime.test.ts  signals.test.ts
src/kalshi_cricket_tracker/: cli.py  config.py  odds.py  winprob.py
src/kalshi_cricket_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_bandit.py  test_btc15m_algorithm_alignment.py  test_btc15m_exec.py  test_btc15m_lifecycle.py  test_btc15m_live_snapshot.py  test_btc15m_vol_bwk.py  test_build_dashboard_data.py  test_config.py  test_live_arb.py  test_live_arb_extensive.py  test_odds_and_guardrails.py  test_risk.py  test_signals.py  test_winprob_and_signal_override.py  test_winprob_extensive.py
(+21 files in other folders)
